feat: enrollments feature completed
